part16-network-policies/network-policy-secure-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-policy-secure-pod
  labels:
    app: secure-app
spec:
  containers:
    - name: network-policy-secure-container
      image: nginx
      ports:
       - containerPort: 80
